# webattack-payload-detector

./: .gitignore  README.md  pyproject.toml  sqli_rnn_training.ipynb  test.sql  test_server.py  web_attack_detection.ipynb
backend/: model.py
secure_app/: app.py
secure_app/templates/: index.html  login.html  product_detail.html  products.html
sql/: init.sql
vulnerable_app/: app.py  shop.db
vulnerable_app/templates/: index.html  login.html  product_detail.html  products.html
